# flakes

./: README.md  Taskfile.yml  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml  nix.yml  sync.yml
env/: flake.nix
template/: .gitignore
template/c/: .gitignore  CMakeLists.txt  Taskfile.yml  flake.nix
template/c/.github/workflows/: nix.yml
template/c/src/: main.c
template/c/tasks/: c.yml
template/c/tests/: test_add.c
template/default/: Taskfile.yml  flake.nix
template/default/.github/workflows/: ci.yml
template/deno/: .gitignore  Taskfile.yml  flake.nix
template/deno/tasks/: deno.yml
template/haskell/: .gitignore  .hlint.yaml  .yamlfmt.yml  .yamllint.yml  Taskfile.yml  flake.nix  package.yaml
template/haskell/.github/workflows/: ci.yml
template/haskell/app/: Main.hs
template/haskell/src/: Lib.hs
template/haskell/tasks/: haskell.yml
template/haskell/test/: LibSpec.hs
template/node/: .yamlfmt.yml  .yamllint.yml  Taskfile.yml  flake.nix
template/node/.github/workflows/: nix.yml
template/node/tasks/: node.yml
template/ocaml/: .gitignore  .yamlfmt.yml  .yamllint.yml  Taskfile.yml  flake.nix
template/ocaml/tasks/: ocaml.yml
template/ocaml/test/: dune  test_add.ml
template/python/: .gitignore  Taskfile.yml  flake.nix
template/python/.github/workflows/: nix.yml
template/python/tasks/: python.yml
template/rust/: .gitignore  Taskfile.yml  flake.nix
template/rust/.github/workflows/: ci.yml
template/rust/tasks/: rust.yml  toml.yml
